--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+    <title>Special Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header-banner">Elie and her youtube videos!</div>
-    <h1>Hello, World!</h1>
-    <p>This is my first web page.</p>
+    <div class="container">
+        <header>
+            <h1>Elie Loves Youtube</h1>
+            <img src="bow.png" alt="Bow" class="bow"> <!-- Ensure you have a cute bow image named bow.png -->
+        </header>
+        <main>
+            <p>A special place, just a click away...</p>
+            <button id="specialButton">Surprise Me!</button>
+        </main>
+        <footer>
+            <p>Made with 💖 for you.</p>
+        </footer>
+    </div>
 </body>
 </html>
