--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <div class="container">
         <header>
             <h1>Elie Loves Youtube</h1>
-            <img src="bow.png" alt="Bow" class="bow"> <!-- Ensure you have a cute bow image named bow.png -->
+            <img src="bow.png" alt="Bow" class="bow" style="background-color: transparent;"> <!-- Ensure you have a cute bow image named bow.png -->
         </header>
         <main>
-            <p>A special place, just a click away...</p>
-            <button id="specialButton">Surprise Me!</button>
+            <p></p>
+            <button id="specialButton">Click!</button>
         </main>
         <footer>
-            <p>Made with 💖 for you.</p>
         </footer>
     </div>
 </body>
