--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         </header>
         <main>
             <p></p>
-            <button id="specialButton">Click!</button>
+            <form action="video.php" method="post">
+                <button id="specialButton">Click!</button>
+            </form>
         </main>
         <footer>
         </footer>
