--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <img src="bow.png" alt="Bow" class="bow" style="background-color: transparent;">
         </header>
         <main>
-            <button id="randomVideoButton">Surprise Me!</button>
+            <button id="randomVideoButton">Cody & Ko Time!</button>
         </main>
         <footer>
-            <p>Made with 💖 for you.</p>
+            <p>For my favorite girl</p>
         </footer>
     </div>
         
