--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="randomVideoButton">Cody & Ko Time!</button>
         </main>
         <footer>
-            <p>For my favorite girl❤️❤️❤️</p>
+            <p>For my favorite girl❤️</p>
         </footer>
     </div>
         
